<resources>
    <string name="app_name">Run 42K</string>
    <string name="hello_world">Hello world!</string>
    <string name="pause">PAUSE</string>
    <string name="stop">STOP</string>
    <string name="start">START</string>
    <string name="resume">RESUME</string>
    <string name="ustawienia">Settings</string>
    <string name="gps_enabled">GPS enabled</string>
    <string name="gps_disabled">GPS not enabled \nenable it?</string>
    <string name="now">NOW</string>
    <string name="done">DONE</string>
    <string name="dialog_message_on_stop">Are you sure, you want to stop recording the activity?</string>
    <string name="dialog_message_low_gps_accuracy">Please wait for better gps signal</string>
    <string name="dialog_message_no_gps">Please enable gps</string>
    <string name="dialog_choose_what_to_display">Choose what to display on this field</string>
    <string name="dialog_message_on_lost_gpsp">Waiting for gps signal#8230;</string>
    <string name="dialog_message_romve">Are you sure, you want to remove this activity?</string>
    <string name="dialog_message_remove_action">Are you sure, you want to remove this action?</string>
    <string name="dialog_message_remove_workout">Are you sure, you want to remove this workout?</string>
    <string name="runs_summary">Runs Summary</string>
    <string name="gps_accuracy">GPS Accuracy:</string>
    <string name="its_time_to_run_notification_title">Today\'s workout!</string>
    <string name="its_time_to_run_notification_message">There\'s planned activity for today\'s day</string>
    <string name="music">Music</string>
    <string name="pull_name">Pull here to start workout</string>
    <string name="distance">Distance</string>
    <string name="actual_time">Actual Time</string>
    <string name="time">Time</string>
    <string name="time_lap">Lap Time</string>
    <string name="time_last_lap">Last Lap Time</string>
    <string name="date">Date</string>
    <string name="gps_accuracy_value">GPS Accuracy</string>
    <string name="distance_lap">Lap Distance</string>
    <string name="distance_last_lap">Last Lap Distance</string>
    <string name="pace">Pace</string>
    <string name="pace_avrage">Avrage Pace</string>
    <string name="pace_lap">Lap Pace</string>
    <string name="pace_last_lap">Last Lap Pace</string>
    <string name="pace_best">Best Pace</string>
    <string name="height">Height</string>
    <string name="speed">Speed</string>
    <string name="speed_avrage">Avrage Speed</string>
    <string name="speed_lap">Lap Speed</string>
    <string name="speed_last_lap">Last Lap Speed</string>
    <string name="speed_max">Max Speed</string>
    <string name="height_max">Max Height</string>
    <string name="height_min">Min Height</string>
    <string name="dashes">-:--</string>
    <string name="dashes2">-,---</string>
    <string name="seconds">s</string>
    <string name="minutes_per_km">min/\nkm</string>
    <string name="km">km</string>
    <string name="km_per_hour">km/\nh</string>
    <string name="m">m</string>
    <string name="minutes">min</string>
    <string name="duration">Duration</string>
    <string name="workouts">Workout</string>
    <string name="trening_plans">Trening plans</string>
    <string name="new_workout">New workout</string>
    <string name="add_workout">Add this workout</string>
    <string name="times">times</string>
    <string name="repeat">Repeat</string>
    <string name="warmup">Warm up</string>
    <string name="add_new">Add new</string>
    <string name="actions">Actions</string>
    <string name="name">Name</string>
    <string name="select_workout">Select this workout</string>
    <string name="slow">Slow</string>
    <string name="steady">Steady</string>
    <string name="fast">Fast</string>
    <string name="splits">Splits</string>
    <string name="charts">Charts</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="all">All</string>
    <string name="distansAndTime">Distance \nand time</string>
    <string name="distansAndPace">Distance \nand pace</string>
    <string name="timeAndPace">Time \nand pace</string>
    <string name="add_action">Add this action</string>
    <string name="interval">Interval</string>
    <string name="virtual_partner">Virtual \npartner</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="edit_action">Edit Action</string>
    <string name="edit">Edit</string>
    <string name="no_workout_actions">This workout has no actions.</string>
    <string name="settings_caps">SETTINGS</string>
    <string name="actions_caps">ACTIONS</string>
    <string name="name_caps">NAME</string>
    <string name="generate_repeats">Generate Repeats</string>
    <string name="no_actions">No actions to repeat</string>
    <string name="no_pause">Sorry, pause is not available during worm up yet</string>
    <string name="repeats_dialog_title">Repeat:</string>
    <string name="from_action">From Action:</string>
    <string name="to_action">To Action</string>
    <string name="how_many_times">How Many Times:</string>
    <string name="ok_caps">OK</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="Annotations">Annotations</string>
    <string name="history">History</string>
    <string name="activity">Activity</string>
    <string name="chart_title_speed">Speed (km/h)</string>
    <string name="chart_title_altitude">Altitude (m)</string>
    <string name="split_time">Split time</string>
    <string name="total_time">Total time</string>
    <string name="no_splits_info">No splits. Run more than a kilometer</string>
    <string name="menu_ctx_actions">Actions</string>
    <string name="delete_action">Delete</string>
    <string name="change_name">Change Name</string>
    <string name="new_name">New Name</string>
    <string name="empty_string"></string>
    <string name="no_history_info">There\'s no activity history</string>
    <string name="notification_message">Activity recording. Click here to open.</string>
    <string name="colon">:</string>
    <string name="workout_actions">Workout actions</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="run">Run</string>
    <string name="settings_title_reminder">Workout reminder</string>
    <string name="settings_title_application">Application settings</string>
    <string name="settings_title_other">Other</string>
    <string name="key_aplication_sound">sound_app_key</string>
    <string name="aplication_sound">In-App sounds</string>
    <string name="key_auto_pause">auto_pause_key</string>
    <string name="auto_pause">Auto pause</string>
    <string name="key_countdown_before_start">countdown_key</string>
    <string name="countdown_before_start">Countdown</string>
    <string name="key_map_3d">map_key</string>
    <string name="map_3d">Map in 3D mode</string>
    <string name="key_warm_up_time">warm_up_time</string>
    <string name="warm_up_time">Warm up</string>
    <string name="reminder_day_key">reminder_day_key</string>
    <string name="reminder_day">Reminder day</string>
    <string name="reminder_day_dialog_title">Remind me every</string>
    <string name="reminder_hour_key">reminder_hour_key</string>
    <string name="reminder_hour">Reminder hour</string>
    <string name="reminder_hour_dialog_title">Remind me at</string>
    <string name="go">GO</string>
    <string name="action">Action</string>
    <string name="run_fast">Speed fast!</string>
    <string name="run_steady">Speed steady!</string>
    <string name="run_slow">Speed slow!</string>
    <string name="for_how_much">For</string>
    <string name="chase_virtual_partner">Chase virtual partner!</string>
    <string name="meters">meters.</string>
    <string name="minutes_speak">minutes.</string>
    <string name="seconds_speak">seconds</string>
    <string name="over_kilometer">per kilometer.</string>
    <string name="with_pace">With pace</string>
    <string name="warm_up_speak">Warm up!</string>
    <string name="no_tts_dialog_check_title">Application\'s voice</string>
    <string name="no_tts_dialog_check_message">This application uses speech synthesator. Application will now check does your device has speech synthesator application.</string>
    <string name="no_tts_dialog_title">Application\'s voice</string>
    <string name="no_tts_dialog_message">There\'s no speech synthesator on your device.\n\nYou can install any speech synthesator you like (commonly called TTS or text-to-speech) and set it in your phone\'s settings.\n\nWould you like to install android\'s default TTS speech synthesator right now?</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="none">None</string>
    <string name="remind">Remind me in</string>
    <string name="set_remind">Set reminder</string>
    <string name="run_summary">Run summary</string>
    <string name="reminder_dialog_title">Set reminder</string>
    <string name="reminder_set">Reminder set for</string>
    <string name="reminder_disable">Reminder disabled</string>
    <string name="no_trening_plan_in_selected_day">No activity for selected day</string>
    <string name="how">How</string>
    <string name="select">Select</string>
    <string name="end_training">End training</string>
    <string name="dismiss">Dismiss</string>
    <string name="touch_to_create">Touch, to create new workout</string>
    <string name="version_title">Version</string>
    <string name="version">Run 42K ver. 1.2</string>
    <string name="about_title">About</string>
    <string name="about">This application was developed by \n Jakub Skudlarski and Marek Kresnicki. \n Run safe and beat all records.</string>
    <string name="trening_plan_todays_workout_title">Trening plan</string>
    <string name="trening_plan_todays_workout_message">There\'s planned workout for today in selected trening plan.</string>
    <string name="trening_plan_todays_workout_positive_button">Start planned worokut</string>
    <string name="trening_plan_todays_workout_negative_button">Later</string>
    <string name="trening_plan_select_title">Select training?</string>
    <string name="trening_plan_select_message">Do you want to select this training plan?</string>
    <string name="trening_plan_change_title">Change training?</string>
    <string name="trening_plan_change_message">Do you want to change your current training to this training plan?</string>
    <string name="trening_plan_confirm_title">Trening plan selected</string>
    <string name="trening_plan_confirm_message">All reminders and workouts for selected trening plan have been set.</string>
    <string name="trening_plan_disable_title">Disable training?</string>
    <string name="trening_plan_disable_message">Do you want to disable this training plan?</string>
    <string name="trening_plan_confirm_disable_title">Trening plan disabled</string>
    <string name="trening_plan_confirm_disable_message">All reminders and workouts for selected trening plan have been disabled.</string>
</resources>