<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.pwr.zpi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_grey_backgroud"
    android:orientation="vertical" >

    <com.pwr.zpi.views.TopBar
                android:id="@+id/topBarSplits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                app:titleText="@string/splits"
                app:hasLeftButton="true"
                app:leftButtonText="@string/activity">
            </com.pwr.zpi.views.TopBar>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_bigger_vertical_margin"
        android:background="@drawable/view_grey_background" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/km"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/split_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/total_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:src="@drawable/horizontal_line" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <ListView
            android:id="@+id/listViewSplits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@color/list_transparent_color" >
        </ListView>

        <RelativeLayout
            android:id="@+id/relativeLayoutNoSplitsInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/no_splits_info"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>