<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.pwr.zpi"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.pwr.zpi.views.TopBar
        android:id="@+id/topBarActionSimple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hasLeftButton="true"
        custom:hasTitle="false"
        custom:leftButtonText="@string/new_workout" >
    </com.pwr.zpi.views.TopBar>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayoutTimeDistance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/buttonSteady"
            style="@style/MultipleButtonMiddleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/steady" />

        <Button
            android:id="@+id/buttonFast"
            style="@style/MultipleButtonRightStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonSteady"
            android:layout_toRightOf="@id/buttonSteady"
            android:text="@string/fast" />

        <Button
            android:id="@+id/buttonSlow"
            style="@style/MultipleButtonLeftStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonSteady"
            android:layout_toLeftOf="@id/buttonSteady"
            android:text="@string/slow" />
    </RelativeLayout>

    <Button
        android:id="@+id/buttonAddIntervalWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/small_margin"
        android:background="@drawable/workouts_white_button_background"
        android:padding="@dimen/buttons_bigger_padding"
        android:text="@string/add_action"
        android:textSize="@dimen/large_text_size"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/main_color"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonAddIntervalWorkout"
        android:layout_below="@+id/LinearLayoutTimeDistance"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/linearLayoutIntervalTimeChooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" >

            <com.pwr.zpi.views.CustomPicker
                android:id="@+id/customPickerIntervalHourPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                custom:digitNumber="2"
                custom:maxValue="999"
                custom:minValue="0" >
            </com.pwr.zpi.views.CustomPicker>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/colon"
                android:textSize="@dimen/large_text_size"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <com.pwr.zpi.views.CustomPicker
                android:id="@+id/customPickerIntervalMinutePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                custom:digitNumber="2"
                custom:maxValue="60"
                custom:minValue="0" >
            </com.pwr.zpi.views.CustomPicker>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/colon"
                android:textSize="@dimen/large_text_size"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <com.pwr.zpi.views.CustomPicker
                android:id="@+id/customPickerIntervalSecPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                custom:digitNumber="2"
                custom:maxValue="60"
                custom:minValue="0" >
            </com.pwr.zpi.views.CustomPicker>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutIntervalDistanceChooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:visibility="gone" >

            <com.pwr.zpi.views.CustomPicker
                android:id="@+id/customPickerIntervalKmPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                custom:maxValue="999"
                custom:minValue="0" >
            </com.pwr.zpi.views.CustomPicker>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/km"
                android:textSize="@dimen/large_text_size"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <com.pwr.zpi.views.CustomPicker
                android:id="@+id/customPickerIntervalMPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                custom:incrementValue="5"
                custom:maxValue="999"
                custom:minValue="0" >
            </com.pwr.zpi.views.CustomPicker>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/m"
                android:textSize="@dimen/large_text_size"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutTimeDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" >

        <Button
            android:id="@+id/buttonTime"
            style="@style/MultipleButtonLeftStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/time" />

        <Button
            android:id="@+id/buttonDistance"
            style="@style/MultipleButtonRightStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/distance" />
    </LinearLayout>

</RelativeLayout>