<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/gray_background">
        <TextView
        android:id="@+id/textViewWorkoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:textColor="@color/white"
        android:text="@string/name"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        
        <!-- -margin makes line above name textview -->
        <View
        android:id="@+id/divider1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="-2dip"	
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:background="@color/white" />
    <Button
        android:id="@+id/ButtonChooseWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:padding="@dimen/small_text_size"
        android:text="@string/select_workout"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
       <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actions_caps"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    

</LinearLayout>
